fix: contrast

--- a/frontend/app/src/app/components/bmc-canvas/components/note-card/note-card.component.scss
+++ b/frontend/app/src/app/components/bmc-canvas/components/note-card/note-card.component.scss
@@ -29,12 +29,14 @@
   &.customersegments,
   &.channels {
     background-color: #6782ff;
+    color:#fff;
   }
 
   // Finance related cards have same color
   &.revenuestreams,
   &.coststructure {
     background-color: #b466c1;
+    color:#fff;
   }
 
   // Rest has same color
